# smart-expense-nlp

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  quickstart.md  requirements-dev.txt  requirements-training.txt  requirements.txt  setup-local.bat  setup-local.sh
.github/workflows/: ci.yml
configs/: inference_config.yaml  training_config.yaml
data/raw/: README.md  labelling_template.csv
docs/: DEPLOTMENT_GUIDE.md  TRAINING_GUIDE.md
notebooks/: README.md
src/api/: main.py
src/api/routes/: parse.py
